--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "formik": "^2.4.6",
-    "next": "16.0.1",
+    "next": "15.2.3",
+    "next-intl": "^4.4.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "19.2.0",
